# cc-miner

./: .gitlab-ci.yml  Makefile.am  Makefile.in  Output-SourceControl-Git.txt  README-ANDROID.md  README.md  README.txt  api.cpp  balloon.cpp  balloon.h  balloon3.cpp  banner.h  bench.cpp  bignum.hpp  build-freebsd.sh  build.sh  ccminer.cpp  ccminer.vcxproj  ccminer.vcxproj.filters  configure.ac  configure.sh  cuda_helper.h  depend.sh  miner.h  ripe.cu  run  serialize.hpp  util.cpp
autom4te.cache/: output.1  requests  traces.1
compat/: Makefile  ccminer-config.h
compat/jansson/: Makefile  configure  jansson_private_config.h.in
compat/jansson/autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
compat/pthreads/: pthread_barrier.hpp
equi/: equi-stratum.cpp
miner/: ccminer.cpp
res/: banner.h  cpuminer.rc
verus/: clhash.cpp  commonold.h  cpu_verushash.cpp  cpu_verushash.hpp  haraka.c  haraka.h  haraka_portable.c  haraka_portable.h  hash.h  verus.cu  verus_clhash.cpp  verus_clhash.h  verus_clhash_portable.cpp  verus_hash.h  verusscan.cpp
verus/New folder/: haraka.c  haraka.h
verus/primitives/: block.cpp  block.h  nonce.cpp  nonce.h  transactionold.cpp  transactionold.h
